@@ -11,6 +11,8 @@
 - NEW: The status list control is now configurable. Columns can
        be reordered, hidden or shown. And the column sizes are 
        stored between sessions. See issue #80 for details. (Stefan)
+- NEW: The revision graph shows the last committed revision
+       too for every branch/tag. See issue @192 for details. (Stefan)
 
 Version 1.3.1
 - BUG: Patches with non ANSI or non UTF8 encoding couldn't be applied
